# django-objectstorage

./: setup.cfg
objectstorage/: apps.py  models.py  storage.py  urls.py  utils.py  views.py
