[metadata]
name = django-object-storage
version = 0.1
description = An app to easily integrate storage backends like Amazon S3 with your django app. 
author = Tirth Jain
author_email = jaintirth24@gmail.com
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1  
    Intended Audience :: Developers
    

[options]
include_package_data = true
packages = find:
